# AnalysisTreeQA

./: .gitignore  .travis.yml  AnalysisTreeQAConfig.cmake.in  CMakeLists.txt  README.md
cmake_modules/: AnalysisTree.cmake  AnalysisTreeCuts.cmake  analysistree.cmake  cuts.cmake
docs/: CONTRIBUTING.md  Doxyfile.in
examples/: CMakeLists.txt  example.cpp  get_test_input.sh  rootlogon.C
src/: AnalysisTreeQALinkDef.h  Axis.cpp  Axis.hpp  BasicQA.hpp  CMakeLists.txt  EntryConfig.cpp  EntryConfig.hpp  Manager.cpp  Manager.hpp  Manager.test.hpp  Task.cpp  Task.hpp  Utils.hpp  VariantMagic.hpp
tasks/: CMakeLists.txt  cbm_qa.cpp  na61_qa.cpp
test/: CMakeLists.txt  test_runner.cxx
test/integration/: Manager.test.hpp
